# python_packaging

./: .gitignore  01-introduction.html  01-scripts-and-modules.html  01-scripts-and-modules.md  02-packages.html  02-packages.md  03-building-and-installing.html  03-building-and-installing.md  04-history-of-packaging.html  04-history-of-packaging.md  05-publishing.html  05-publishing.md  404.html  CODE_OF_CONDUCT.html  LICENSE.html  README.md  TODO.html  TODO.md  aio.html  build_script.R  config.yaml  images.html  index.html  instructor-notes.html  key-points.html  links.md  md5sum.txt  pkgdown.yml  profiles.html  setup.md  sitemap.xml
episodes/: 01-scripts-and-modules.Rmd  02-advanced-scripting.Rmd  02-packages.Rmd  03-building-and-installing.Rmd  03-installing.Rmd  04-history-of-packaging.Rmd  05-publishing.Rmd
examples/: SIR_model.py  SIR_model_script.py  input.yaml  mytoml.toml  pyproject.toml  setup.cfg  setup_distutils.py  setup_setuptools_old.py  subparsers.py
examples/epi_models/: __init__.py  __main__.py
examples/epi_models/models/: SIS.py  data.json  utils.py
examples/epi_models/plotting/: plot_SEIR.py  plot_SIR.py  plot_SIS.py
examples/src/epi_models/: __main__.py
examples/src/epi_models/models/: SEIR.py  SIR.py  __init__.py
examples/src/epi_models/plotting/: __init__.py  plot_SEIR.py  plot_SIR.py
instructor/: 01-introduction.html  01-scripts-and-modules.html  02-packages.html  03-building-and-installing.html  04-history-of-packaging.html  05-publishing.html  404.html  CODE_OF_CONDUCT.html  LICENSE.html  TODO.html  aio.html  images.html  index.html  instructor-notes.html  key-points.html  profiles.html
learners/: setup.md
