[build-system]
requires = [
    "setuptools >= 61",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "epi_models"
version = "0.1.0"
dependencies = [
    "matplotlib",
    "pyyaml",
]

[project.scripts]
epi_models = "epi_models.__main__:main"
epi_models_sir = "epi_models.plotting.plot_SIR:main"

[tool.setuptools.package-data]
"*" = ["*.json"]
