; file: setup.cfg
[metadata]
name = epi_models
version = 1.0
description = Epidemiology modelling tools in Python
author = Jordan Smith
author_email = jsmith@email.net
url = "https://github.com/jsmith1234/epi_models"

[options]
package_dir = =src
packages =
    epi_models
    epi_models.models
    epi_models.plotting
install_requires =
    matplotlib >= 3.6
    pyyaml >= 6.0
